<resources>
    <string name="app_name">SizeBook</string>
    <string name="add_record">Add Record</string>
    <string name="view_record">View Record</string>
    <string name="edit">Edit</string>
    <string name="finish">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="date">Date taken (yyyy-mm-dd) </string>
    <string name="neck">Neck</string>
    <string name="bust">Bust</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="inseam">Inseam</string>
    <string name="comment">Comment</string>
    <string name="delete">Delete</string>


    <string name="no_date">No date set.</string>
    <string name="no_neck">No neck measurement set.</string>
    <string name="no_chest">No chest measurement set.</string>
    <string name="no_bust">No bust measurement set.</string>
    <string name="no_waist">No waist measurement set.</string>
    <string name="no_hip">No hip measurement set.</string>
    <string name="no_inseam">No inseam measurement set.</string>
    <string name="no_comment">No comment set.</string>
</resources>
